--- a/bank_customer_data_analysis_eng.ipynb
+++ b/bank_customer_data_analysis_eng.ipynb
@@ -527,7 +527,7 @@
     "id": "tdiHbFA2dqVk"
    },
    "source": [
-    "### **Conclusion:**\r\n",
+    "**Conclusion:**\r\n",
     "\r\n",
     "There is 1 missing value in the following columns: **Geography**, **Age**, **HasCrCard**, and **IsActiveMember**.\r\n",
     "\r\n",
@@ -1193,33 +1193,33 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_aabae_row0_col0, #T_aabae_row2_col1 {\n",
+       "#T_ba4ff_row0_col0, #T_ba4ff_row2_col1 {\n",
        "  background-color: #9e9eff;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_aabae_row0_col1, #T_aabae_row1_col0 {\n",
+       "#T_ba4ff_row0_col1, #T_ba4ff_row1_col0 {\n",
        "  background-color: #ffb0b0;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_aabae_row1_col1 {\n",
+       "#T_ba4ff_row1_col1 {\n",
        "  background-color: #ffd0d0;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_aabae_row2_col0 {\n",
+       "#T_ba4ff_row2_col0 {\n",
        "  background-color: #e6e6ff;\n",
        "  color: #000000;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_aabae\">\n",
+       "<table id=\"T_ba4ff\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_aabae_level0_col0\" class=\"col_heading level0 col0\" colspan=\"2\">mean</th>\n",
+       "      <th id=\"T_ba4ff_level0_col0\" class=\"col_heading level0 col0\" colspan=\"2\">mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level1\" >Gender</th>\n",
-       "      <th id=\"T_aabae_level1_col0\" class=\"col_heading level1 col0\" >Female</th>\n",
-       "      <th id=\"T_aabae_level1_col1\" class=\"col_heading level1 col1\" >Male</th>\n",
+       "      <th id=\"T_ba4ff_level1_col0\" class=\"col_heading level1 col0\" >Female</th>\n",
+       "      <th id=\"T_ba4ff_level1_col1\" class=\"col_heading level1 col1\" >Male</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Geography</th>\n",
@@ -1229,25 +1229,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_aabae_level0_row0\" class=\"row_heading level0 row0\" >France</th>\n",
-       "      <td id=\"T_aabae_row0_col0\" class=\"data row0 col0\" >99564.25</td>\n",
-       "      <td id=\"T_aabae_row0_col1\" class=\"data row0 col1\" >100226.54</td>\n",
+       "      <th id=\"T_ba4ff_level0_row0\" class=\"row_heading level0 row0\" >France</th>\n",
+       "      <td id=\"T_ba4ff_row0_col0\" class=\"data row0 col0\" >99564.25</td>\n",
+       "      <td id=\"T_ba4ff_row0_col1\" class=\"data row0 col1\" >100226.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_aabae_level0_row1\" class=\"row_heading level0 row1\" >Germany</th>\n",
-       "      <td id=\"T_aabae_row1_col0\" class=\"data row1 col0\" >102446.42</td>\n",
-       "      <td id=\"T_aabae_row1_col1\" class=\"data row1 col1\" >99905.03</td>\n",
+       "      <th id=\"T_ba4ff_level0_row1\" class=\"row_heading level0 row1\" >Germany</th>\n",
+       "      <td id=\"T_ba4ff_row1_col0\" class=\"data row1 col0\" >102446.42</td>\n",
+       "      <td id=\"T_ba4ff_row1_col1\" class=\"data row1 col1\" >99905.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_aabae_level0_row2\" class=\"row_heading level0 row2\" >Spain</th>\n",
-       "      <td id=\"T_aabae_row2_col0\" class=\"data row2 col0\" >100754.01</td>\n",
-       "      <td id=\"T_aabae_row2_col1\" class=\"data row2 col1\" >98425.69</td>\n",
+       "      <th id=\"T_ba4ff_level0_row2\" class=\"row_heading level0 row2\" >Spain</th>\n",
+       "      <td id=\"T_ba4ff_row2_col0\" class=\"data row2 col0\" >100754.01</td>\n",
+       "      <td id=\"T_ba4ff_row2_col1\" class=\"data row2 col1\" >98425.69</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1f23cafcf20>"
+       "<pandas.io.formats.style.Styler at 0x29c0bbb2660>"
       ]
      },
      "metadata": {},
